[tool.poetry]
name = "vistats"
version = "0.2.1"
description = "package of visualization for statistical tests."
authors = ["takato86 <okudo@nii.ac.jp>"]
readme = "README.md"
repository = "https://github.com/takato86/vistats"


[tool.poetry.dependencies]
python = ">=3.9"
pandas = "*"
numpy = "*"
matplotlib = "*"
ipykernel = "*"
scipy = "*"
seaborn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

